--- a/charts/base-ab/Chart.yaml
+++ b/charts/base-ab/Chart.yaml
@@ -5,7 +5,7 @@ type: application
 
 # Esta es la versión DEL CHART (la plantilla en sí)
 # Cada vez que modifiques un .yaml dentro de templates/, debes subir esto (0.1.0 -> 0.1.1)
-version: 0.1.2
+version: 0.1.3
 
 # Esta es la versión DE LA APP por defecto (ej. la versión de Nginx o de tu Java app)
 # Es informativo, pero útil para saber qué versión de software despliega por defecto.
@@ -21,7 +21,7 @@ keywords:
 
 # Opcional: Quién mantiene esto
 maintainers:
-  - name: Fran
+  - name: Francisco
     email: fcovillegast@gmail.com
 
 # Opcional: Si tu chart base depende de otros charts (ej. Redis o Postgres)
