--- a/charts/base-ab/templates/deployment.yaml
+++ b/charts/base-ab/templates/deployment.yaml
@@ -3,19 +3,19 @@ kind: Deployment
 metadata:
   name: {{ .Values.microservice.name }}
   labels:
-    app: {{ .Values.microservice.name }} #l
+    app: {{ printf "%-label" .Values.microservice.name }} #l
 spec:
   replicas: {{ .Values.microservice.replicas }}
   selector:
     matchLabels:
-      app: {{ .Values.microservice.name }}#l
+      app: {{ printf "%-label" .Values.microservice.name }} #l
   template:
     metadata:
       labels:
-        app: {{ .Values.microservice.name }}#l
+        app: {{ printf "%-label" .Values.microservice.name }} #l
     spec:
       containers:
-        - name: {{ .Values.microservice.name }}#l
+        - name: {{ printf "%-label" .Values.microservice.name }} #l
           image:  {{ .Values.global.imgPath }}:{{ .Values.global.appVersion }}
           ports:
             - containerPort: 80
