--- a/charts/base-ab/Chart.yaml
+++ b/charts/base-ab/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
-name: base-ab
+name: microservice
 description: Chart para crear todo lo de k8s referente a los microservicios
 type: application
 
 # Esta es la versión DEL CHART (la plantilla en sí)
 # Cada vez que modifiques un .yaml dentro de templates/, debes subir esto (0.1.0 -> 0.1.1)
-version: 0.1.9
+version: 0.1.10
 
 # Esta es la versión DE LA APP por defecto (ej. la versión de Nginx o de tu Java app)
 # Es informativo, pero útil para saber qué versión de software despliega por defecto.
