--- a/charts/base-ab/Chart.yaml
+++ b/charts/base-ab/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: microservice
+name: base-ab
 description: Chart para crear todo lo de k8s referente a los microservicios
 type: application
 
