--- a/charts/microservice/templates/deployment.yaml
+++ b/charts/microservice/templates/deployment.yaml
@@ -3,19 +3,19 @@ kind: Deployment
 metadata:
   name: {{ .Values.microservice.name }}
   labels:
-    app: "{{ .Values.microservice.name }}}-label" #l
+    app: "{{ .Values.microservice.name }}-label" #l
 spec:
-  replicas: {{ .Values.microservice.replicas }}
+  replicas: {{ .Values.microservice.replica }}
   selector:
     matchLabels:
-      app: "{{ .Values.microservice.name }}}-label" #l
+      app: "{{ .Values.microservice.name }}-label" #l
   template:
     metadata:
       labels:
-        app: "{{ .Values.microservice.name }}}-label" #l
+        app: "{{ .Values.microservice.name }}-label" #l
     spec:
       containers:
-        - name: "{{ .Values.microservice.name }}}-label" #l
+        - name: "{{ .Values.microservice.name }}-label" #l
           image:  {{ .Values.global.imgPath }}:{{ .Values.global.appVersion }}
           ports:
             - containerPort: 80
