--- a/charts/microservice/templates/deployment.yaml
+++ b/charts/microservice/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: "{{ .Values.microservice.name }}-label" #l
-          image:  {{ .Values.global.imgPath }}:{{ .Values.global.appVersion }}
+          image:  {{ .Values.microservice.global.imgPath }}:{{ .Values.microservice.global.appVersion }}
           imagePullPolicy: {{ .Values.microservice.container.image.pullPolicy }}
           ports:
             - name: {{ .Values.microservice.container.name }}
