--- a/charts/microservice/values.yaml
+++ b/charts/microservice/values.yaml
@@ -1,9 +1,7 @@
-global:
-  appVersion: ""
-  imgPath: ""
-
-
-ms:
+microservice:
+  global:
+    appVersion: ""
+    imgPath: ""
   name: ""
   replicas: 0
 
