--- a/charts/microservice/templates/secret.yaml
+++ b/charts/microservice/templates/secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  namespace: {{ .Values.ms.name }}
-  name: "{{ .Values.ms.name }}-secret"
+  namespace: {{ .Values.global.ms.name }}
+  name: "{{ .Values.global.ms.name }}-secret"
 type: Opaque
 data:
-  {{- range $key, $val := .Values.ms.container.envs }}
+  {{- range $key, $val := .Values.global.ms.container.envs }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
