--- a/charts/microservice/templates/secret.yaml
+++ b/charts/microservice/templates/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   namespace: {{ .Values.global.ms.name }}
   name: "{{ .Values.global.ms.name }}-secret"
 type: Opaque
-data:
+stringData:
   {{- range $key, $val := .Values.global.ms.container.envs }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
