--- a/charts/microservice/templates/secret.yaml
+++ b/charts/microservice/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.ms.container.envs }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,3 +9,4 @@ stringData:
   {{- range $key, $val := .Values.global.ms.container.envs }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
+{{- end }}
