--- a/charts/microservice/templates/secret.yaml
+++ b/charts/microservice/templates/secret.yaml
@@ -1,12 +1,12 @@
-{{- if .Values.global.ms.container.envs }}
+{{- if .Values.container.envs }}
 apiVersion: v1
 kind: Secret
 metadata:
-  namespace: {{ .Values.global.ms.name }}
-  name: "{{ .Values.global.ms.name }}-secret"
+  namespace: {{ .Values.name }}
+  name: "{{ .Values.name }}-secret"
 type: Opaque
 stringData:
-  {{- range $key, $val := .Values.global.ms.container.envs }}
+  {{- range $key, $val := .Values.container.envs }}
   {{ $key }}: {{ $val | quote }}
   {{- end }}
 {{- end }}
