--- a/charts/microservice/templates/hpa.yaml
+++ b/charts/microservice/templates/hpa.yaml
@@ -8,7 +8,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: "{{ .Values.name }}-hpa"
+    name: "{{ .Values.name }}-deployment"
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   {{ if .Values.autoscaling.targetCPUUtilizationPercentage }}
