--- a/charts/microservice/values.yaml
+++ b/charts/microservice/values.yaml
@@ -51,6 +51,8 @@ container:
       limits:
       request:
   gateway:
+    annotations: {}
+    tlsSecretName:
     ingressClass: nginx
     host: www.misitio.local
     contextBasePath: /
