--- a/charts/microservice/templates/namespace.yaml
+++ b/charts/microservice/templates/namespace.yaml
@@ -2,3 +2,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: {{ .Values.name }}
+  labels:
+    {{- if.Values.istioEnabled }}
+    istio-injection: enabled
+    {{- end }}
+    {{- if.Values.canaryEnabled }}
+    istio.io/rev: canary
+    {{- end }}
