--- a/charts/microservice/templates/virtual-service.yaml
+++ b/charts/microservice/templates/virtual-service.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.istio.io/v1
+apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   namespace: {{ .Values.name }}
@@ -15,6 +15,7 @@ spec:
       - uri:
           prefix: {{ .Values.virtualService.uriPrefix }}
       route:
-      - destination:
-          host: "{{ .Values.name }}.{{ .Values.name }}.svc.cluster.local"
-          subset: v1
+        - destination:
+            host: "{{ .Values.name }}-svc"
+            port:
+              number: 80
